--- a/package.json
+++ b/package.json
@@ -10,20 +10,29 @@
   },
   "scripts": {
     "start": "bun src/index.ts",
-    "build": "rm -rf dist &&  microbundle --tsconfig tsconfig.json --no-sourcemap"
+    "build": "webpack --config webpack.config.js"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.5.4"
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/react": "^18.3.5",
     "bcryptjs": "^2.4.3",
-    "express": "^4.19.2",
+    "css-loader": "^7.1.2",
     "isomorphic-unfetch": "^4.0.2",
-    "jsonwebtoken": "^9.0.2",
     "lodash": "github:lodash/lodash",
-    "microbundle": "^0.15.1"
+    "microbundle": "^0.15.1",
+    "path": "^0.12.7",
+    "react": "^18.3.1",
+    "sass": "^1.78.0",
+    "sass-loader": "^16.0.1",
+    "style-loader": "^4.0.0",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4"
   }
 }
