--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "super",
+  "homepage": "https://github.com/DevServer24/jabs-data-app.git",
   "module": "dist/index.m.js",
   "main": "dist/index.js",
+  "version": "1.0.0",
   "unpkg": "dist/index.umd.js",
   "types": "dist/index.d.ts",
   "type": "module",
@@ -25,13 +27,13 @@
     "isomorphic-unfetch": "^4.0.2",
     "lodash": "github:lodash/lodash",
     "microbundle": "^0.15.1",
+    "npm": "^10.8.3",
     "path": "^0.12.7",
     "react": "^18.3.1",
     "sass": "^1.78.0",
     "sass-loader": "^16.0.1",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
-    "ts-node": "^10.9.2",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
   }
