--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "super",
+  "name": "super-pocket-ui",
   "homepage": "https://github.com/DevServer24/jabs-data-app.git",
   "module": "dist/index.m.js",
   "main": "dist/index.js",
@@ -13,11 +13,11 @@
   },
   "devDependencies": {
     "@types/bun": "latest"
-    
   },
   "scripts": {
     "start": "bun src/index.ts",
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "publish": "bun npm publish"
   },
   "peerDependencies": {
     "typescript": "^5.5.4"
@@ -36,6 +36,7 @@
     "npm": "^10.8.3",
     "path": "^0.12.7",
     "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sass": "^1.78.0",
     "sass-loader": "^16.0.1",
     "style-loader": "^4.0.0",
